# challenge1__-5-

./: Solaris.py  complete.json  pyproject.toml  sweep_configs.json
challenge1__-5-/: Dockerfile  README.md  complete.json  docker-compose.yml  sweep_configs.json
challenge1__-5-/logs/tune/trial_0/: events.out.tfevents.1775256437.VydiLix.20071.0
challenge1__-5-/logs/tune/trial_1/: events.out.tfevents.1775257684.VydiLix.20071.3
challenge1__-5-/logs/tune/trial_2/: events.out.tfevents.1775258986.VydiLix.20071.6
challenge1__-5-/logs/tune/trial_3/: events.out.tfevents.1775262961.VydiLix.20071.9
challenge1__-5-/logs/tune/trial_4/: events.out.tfevents.1775266996.VydiLix.20071.12
challenge1__-5-/logs/tune/trial_5/: events.out.tfevents.1775268131.VydiLix.20071.15
challenge1__-5-/seeds/: experiment_seeds.json
challenge1__-5-/variance_analysis/: variance_results.ipynb
challenge3__<5>/: PPO_Solaris.py
seeds/: experiment_seeds.json
variance_analysis/: variance_results.ipynb
variance_analysis/episode_len_mean/empirical_len/: best_empirical_exp_05_batch_128_replicate_2_DQN_1.csv
variance_analysis/episode_len_mean/optuna_len/: optuna_tpe_best_replicate_1_DQN_1.csv  optuna_tpe_best_replicate_2_DQN_1.csv
variance_analysis/episode_rew_mean/empirical_rew/: best_empirical_exp_05_batch_128_replicate_1_DQN_1.csv  best_empirical_exp_05_batch_128_replicate_2_DQN_1.csv  best_empirical_exp_05_batch_128_replicate_3_DQN_1.csv
variance_analysis/episode_rew_mean/optuna_rew/: optuna_tpe_best_replicate_1_DQN_1.csv  optuna_tpe_best_replicate_3_DQN_1.csv
(+135 files in other folders)
