[project]
name = "challenge1"
version = "0.1.0"
description = "Solve Polaris using DQN"
authors = [
    {name = "vydi",email = "jairo.barrerau2@gmail.com"}
]
license = "GLP-3.0"
requires-python = ">=3.11, <3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "stable-baselines3[extra] (>=2.7.1,<3.0.0)",
    "gymnasium[accept-rom-license,atari] (>=1.2.3,<2.0.0)",
    "autorom[accept-rom-license] (>=0.6.1,<0.7.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "ale-py (>=0.11.2,<0.12.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
